--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.nav-bar{
+  max-width: 100vw;
+  min-width: auto;
+  padding: 20px 60px;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  font-size: 24px;
+  text-align: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: #ff5618; */
 }
 
-.App-link {
-  color: #61dafb;
+ul{  
+  margin: 0;
+  padding: 0;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ul_nav-bar{
+  font-weight: 500;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  /* text-align: center; */
+  /* align-items: center; */
+}
+
+li{
+  list-style: none;
+}
+
+.logo{
+  font-family: 'Pacifico', cursive;
+  font-size: 36px;
+  user-select: none;
+}
+
+.link:hover{
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.link:active{
+}
+
+button{
+  margin: 0;
+  padding: 0;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.primary{
+  /* color: #ff5618; */
+  /* border-color: #ff5618; */
+  font-weight: 400;
+  padding: 4px 12px;
+  margin: 0;
+  background: none;
 }
