--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 
 .App {
   text-align: center;
 }
 
-
-.nav-bar{
+.nav-bar {
   max-width: 100vw;
   min-width: auto;
   padding: 20px 60px;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  font-size: 24px;
+  font-size: 20px;
   text-align: center;
   align-items: center;
-  /* color: #ff5618; */
+  background: #d697f5;
+  color: white;
 }
 
-ul{  
+ul {
   margin: 0;
   padding: 0;
-
 }
 
-.ul_nav-bar{
-  font-weight: 500;
+.ul_nav-bar {
+  font-weight: 400;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   /* text-align: center; */
-  /* align-items: center; */
+  align-items: center;
 }
 
-li{
+li {
   list-style: none;
 }
 
-.logo{
-  font-family: 'Pacifico', cursive;
-  font-size: 36px;
+.logo {
+  font-family: "Pacifico", cursive;
+  font-size: 34px;
   user-select: none;
 }
 
-.link:hover{
+.link:hover {
   text-decoration: underline;
   cursor: pointer;
 }
 
-.link:active{
-}
+/* .link:active{
+} */
 
-button{
+button {
   margin: 0;
   padding: 0;
   font-size: 18px;
@@ -58,11 +57,21 @@ button{
   border-radius: 6px;
 }
 
-.primary{
-  /* color: #ff5618; */
-  /* border-color: #ff5618; */
+.primary {
+  border: 1px solid #ffffff;
+  color: white;
   font-weight: 400;
   padding: 4px 12px;
   margin: 0;
-  background: none;
+  background: #d697f5;
+  box-shadow: 0.1em 0.1em 0.5em rgba(0, 0, 0, 0.2);
+}
+
+.primary:hover {
+  box-shadow: 0.2em 0.2em 0.75em rgba(0, 0, 0, 0.2);
+  background: #d689fc;
+}
+
+.primary:active {
+  background: #c76df3;
 }
