--- a/src/App.css
+++ b/src/App.css
@@ -77,11 +77,17 @@ button {
 }
 
 .account__div {
-  margin: 10px;
-  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
+  padding: 1.5em;
   border: 1px solid rgb(199, 199, 199);
   border-radius: 8px;
   box-shadow: 0.2em 0.2em 0.2em rgba(0, 0, 0, 0.1);
+  align-self: flex-start;
+  flex: 1;
+  /* min-height:fit-content; */
+  /* height: 200px; */
 }
 
 .user-photo__img {
@@ -89,11 +95,6 @@ button {
   height: 60px;
   border-radius: 50%;
   border: 1px solid rgb(165, 165, 165);
-}
-
-.account__div {
-  display: flex;
-  flex-direction: row;
 }
 
 .user-info__div {
@@ -113,6 +114,38 @@ button {
   padding: 4px;
 }
 
-.label{
+.label {
   font-size: 24px;
+}
+
+.workspace {
+  margin: 5px;
+  display: flex;
+  flex-direction: row;
+  /* grid-template-rows: none  ; */
+}
+
+.notes__div {
+  margin: 5px;
+  flex: 2;
+}
+
+.input-block__div {
+  padding: 2em;
+  border: 1px solid rgb(199, 199, 199);
+  border-radius: 8px;
+  box-shadow: 0.2em 0.2em 0.2em rgba(0, 0, 0, 0.1);
+  flex: 2;
+}
+
+textarea {
+  resize: vertical;
+  width: calc(100% - 1em);
+  padding: 8px;
+  font-size: 16px;
+  min-height: 1em;
+  max-height: 8em;
+
+  border-radius: 4px;
+  border: 1px solid rgb(187, 187, 187);
 }
