--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ button {
 }
 
 .workspace {
-  margin: 5px;
+  margin: 10px 60px;
   display: flex;
   flex-direction: row;
   /* grid-template-rows: none  ; */
@@ -131,11 +131,19 @@ button {
 }
 
 .input-block__div {
-  padding: 2em;
+  padding: 1.5em;
   border: 1px solid rgb(199, 199, 199);
   border-radius: 8px;
   box-shadow: 0.2em 0.2em 0.2em rgba(0, 0, 0, 0.1);
   flex: 2;
+  background: #f4e6fb;
+  
+}
+
+.input-block-bts__div{
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
 }
 
 textarea {
@@ -148,4 +156,23 @@ textarea {
 
   border-radius: 4px;
   border: 1px solid rgb(187, 187, 187);
+  outline-color: #c76df3;
+}
+
+.secondary {
+  width: 4em;
+  margin: 8px 0px 0px 8px;
+  padding: 4px;
+  color: white;
+  background: #c76df3;
+  border: 1px solid #bb4ef2;
+  box-shadow: 0.1em 0.1em 0.1em rgba(0, 0, 0, 0.1);
+}
+
+.secondary:hover{
+  background:#d689fc;
+}
+
+.secondary:active{
+  background: #d697f5;
 }
