--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,7 @@ ul {
   font-weight: 400;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  /* text-align: center; */
   align-items: center;
-
 }
 
 li {
@@ -103,8 +101,6 @@ button {
   box-shadow: 0.2em 0.2em 0.2em rgba(0, 0, 0, 0.1);
   align-self: flex-start;
   flex: 1;
-  /* min-height:fit-content; */
-  /* height: 200px; */
 }
 
 .user-photo__img {
@@ -126,8 +122,8 @@ button {
 }
 
 .icon {
-  height: 20px;
-  width: 20px;
+  height: 24px;
+  width: 24px;
   padding: 4px 4px 4px 0px;
 }
 
@@ -136,10 +132,9 @@ button {
 }
 
 .workspace {
-  margin: 20px 6em;
+  margin: 20px 10em;
   display: flex;
   flex-direction: row;
-  /* grid-template-rows: none  ; */
 }
 
 .notes__div {
@@ -193,17 +188,13 @@ textarea {
   background: #d697f5;
 }
 
-.post {
-
-}
-
-.post-block-user-info__div{
+.post-block-user-info__div {
   display: flex;
   flex-direction: row;
 }
 
-.post__div{
-  margin: 20px 6em;
+.post__div {
+  margin: 20px 10em;
   border-radius: 8px;
   background: #f2f2f2;
   border: 1px solid rgb(199, 199, 199);
@@ -212,32 +203,44 @@ textarea {
   padding: 1.5em;
 }
 
-.footer__div{
+.footer__div {
   background-color: #956df3;
   padding: 12px 6em;
 }
 
-.social-networks__div{
+.social-networks__div {
   text-align: end;
 }
 
-.small{
+.small {
   color: #fff;
   font-weight: 700;
   text-align: center;
 }
 
-.small-photo{
+.small-photo {
   height: 40px;
   width: 40px;
   margin-right: 10px;
 }
 
-.paragraph{
+.paragraph {
   font-size: 12px;
 }
 
-.post{
+.post {
   font-size: 20px;
   padding-top: 10px;
+}
+
+.post__div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.close-btn__container {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
 }
