--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,16 @@
   text-align: center;
 }
 
+.body__container{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .nav-bar {
   max-width: 100vw;
   min-width: auto;
-  padding: 20px 60px;
+  padding: 20px 10em;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   font-size: 20px;
@@ -95,6 +101,7 @@ button {
   background: #f7f6f6;
   padding: 20px 10em;
   margin: 0;
+  flex: 1;
 }
 
 .account__div {
